fixed mobile view on text wrap  Hillcrest Selfie

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -132,6 +132,10 @@
   .stream li {
     width: 148px;
   }
+
+  .stream li .section-intro {
+    font-size: 8px;
+  }
   /***************************
   PAGE: ABOUT
   ***************************/
